# Ejada-RAG-Project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  ingest.py  llm_service.py  main.py  pyproject.toml  rag.py  requirements.txt
